Bug 303157 - Adding selected Url to places shows the name of the parent directory instead of selected one
Summary: Adding selected Url to places shows the name of the parent directory instead ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.1
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Frank Reininghaus
URL:
Keywords: investigated, regression
Depends on:
Blocks:
 
Reported: 2012-07-07 16:01 UTC by Daniel Kreuter
Modified: 2012-07-11 22:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Kreuter 2012-07-07 16:01:44 UTC
When adding a folder to places, he shows the wrong name.

F.e. you are in $HOME, and want to add a folder which isn't at places yet, Projects for example then the username appears instead of Projects. If you want to add a folder in ~/Documents, f.e. Books then Documents appears instead.


Reproducible: Always

Steps to Reproduce:
1. Add a folder to places
2.
3.
Actual Results:  
The name of the parent directory appears instead of the selected one.

Expected Results:  
The name of the selected folder should appear.

I will add a bugfix soon, have already fixed it locally on my machine.
Comment 1 Daniel Kreuter 2012-07-07 16:38:41 UTC
For the bugfix see also https://git.reviewboard.kde.org/r/105475/
Comment 2 Frank Reininghaus 2012-07-09 08:33:06 UTC
Thanks for the bug report and the patch!
Comment 3 Frank Reininghaus 2012-07-10 06:26:39 UTC
Git commit 9940244ddd68fabf2979b9c0832105e43d725619 by Frank Reininghaus.
Committed on 10/07/2012 at 08:23.
Pushed by freininghaus into branch 'master'.

Use the right name when adding a folder to Places with the context menu

Without this patch, the name of the parent folder was used for the entry
in the Places Panel. Will backport to the KDE/4.9 branch when the RC2
freeze is over.

Thanks to Daniel Kreuter for the patch!

M  +1    -1    dolphin/src/dolphincontextmenu.cpp

http://commits.kde.org/kde-baseapps/9940244ddd68fabf2979b9c0832105e43d725619
Comment 4 Frank Reininghaus 2012-07-11 22:43:41 UTC
Git commit b9d144fc73bc5741bca58c98c0d313fb1e5bcea8 by Frank Reininghaus.
Committed on 10/07/2012 at 08:23.
Pushed by freininghaus into branch 'KDE/4.9'.

Use the right name when adding a folder to Places with the context menu

Without this patch, the name of the parent folder was used for the entry
in the Places Panel. Will backport to the KDE/4.9 branch when the RC2
freeze is over.

Thanks to Daniel Kreuter for the patch!
FIXED-IN: 4.9.0
(cherry picked from commit 9940244ddd68fabf2979b9c0832105e43d725619)

M  +1    -1    dolphin/src/dolphincontextmenu.cpp

http://commits.kde.org/kde-baseapps/b9d144fc73bc5741bca58c98c0d313fb1e5bcea8