Use the right name when adding a folder to Places with the context menu

Without this patch, the name of the parent folder was used for the entry
in the Places Panel. Will backport to the KDE/4.9 branch when the RC2
freeze is over.

Thanks to Daniel Kreuter for the patch!

BUG: 303157
FIXED-IN: 4.9.0
(cherry picked from commit 9940244ddd68fabf2979b9c0832105e43d725619)